Tab-View gegen eigene Variante endlich asgetauscht

--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -49,76 +49,76 @@
 
 <h2>Aufgabe 1.3 - Wireframe with HTML and CSS: Tribute Page</h2>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <example-tab tab-title="&#9432;">
         <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
         <p>In dieser Aufgabe sollte ein einfaches Wireframe mit HTML und CSS nachgebildet werden. Dafür stand lediglich das Mockup zur Verfügung.</p>
     </example-tab>
 
-    <example-tab title="Mockup">
+    <example-tab tab-title="Mockup">
         <figure>
             <img src="tasks/u1/tribute.png" alt="Tribute">
             <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
-    <example-tab title="Code">
+    <example-tab tab-title="Code">
         <file-viewer src="tasks/u1/Abschnitt1.html">Index File</file-viewer>
     </example-tab>
 
-    <example-tab title="Vorschau">
+    <example-tab tab-title="Vorschau">
         <embed-browser src="tasks/u1/Abschnitt1.html"></embed-browser>
     </example-tab>
-  </example-tabs>
+  </tab-view>
 
   <h2>Aufgabe 1.4 - Wireframe with HTML and CSS (Survey Form)</h2>
   
-  <example-tabs>
+  <tab-view>
 
-    <example-tab title="&#9432;">
+    <example-tab tab-title="&#9432;">
         <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
         <p>Auch hier sollte ein einfaches Wireframe nachgebildet werden. Damit das Wireframe möglichst exakt nachgebildet werden konnte, war neben dem Mockup auch der Farbcode <input type="color" value="#b2d6d1"> angegeben sowie ein Hinweis auf die <a href="https://fonts.google.com">Google-Fonts</a>, die in der Webseite eingesetzt wurden.</p>
     </example-tab>
 
-    <example-tab title="Mockup">
+    <example-tab tab-title="Mockup">
         <figure>
             <img src="tasks/u1/survey.png" alt="Survey">
             <figcaption>Abbildung 1.2: Mock-Up einer Form mit mehreren Input-Feldern</figcaption>
         </figure>
     </example-tab>
 
-    <example-tab title="Code">
+    <example-tab tab-title="Code">
         <file-viewer src="tasks/u1/a4.html">Index File</file-viewer>
     </example-tab>
 
-    <example-tab title="Vorschau">
+    <example-tab tab-title="Vorschau">
         <embed-browser src="tasks/u1/a4.html"></embed-browser>
     </example-tab>
-  </example-tabs>
+  </tab-view>
 
   <h2>Aufgabe 1.5 - Wireframe with HTML and CSS (Product Landing Page)</h2>
 
-  <example-tabs>
-    <example-tab title="&#9432;">
+  <tab-view>
+    <example-tab tab-title="&#9432;">
         <h3>Nachbau eines Wireframes mit HTML und CSS</h3>
         <p>Auch in der letzten Aufgabe sollte ein etwas aufwendigeres Wireframe nachgebildet werden. Im Gegensatz zu den vorherigen Aufgaben besteht hier die Schwierigkeit in den nebeneinander platzierten Elementen. Diese lassen sich in einem fixen Layout recht einfach umsetzten. Ändert sich die Größe des Displays, führt dies jedoch zu Problemen. Damit sich Webseiten responsiv verhalten, sind weitere Techniken notwendig, die in Aufgabe 2 vorgestellt werden.</p>
     </example-tab>
     
-    <example-tab title="Mockup">
+    <example-tab tab-title="Mockup">
         <figure>
             <img src="tasks/u1/landing.png" alt="Landingpage">
             <figcaption>Abbildung 1.3: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
         </figure>
     </example-tab>
 
-    <example-tab title="Code">
+    <example-tab tab-title="Code">
         <file-viewer src="tasks/u1/a5.html">Index File</file-viewer>
     </example-tab>
 
-    <example-tab title="Vorschau">
+    <example-tab tab-title="Vorschau">
         <embed-browser src="tasks/u1/a5.html"></embed-browser>
     </example-tab>
-  </example-tabs>
+  </tab-view>
 
   <h2>Aufgabe 1.6 - Integration in die eigene Webseite</h2>
   <p>Diese Webseite wurde vollständig mit HTML und CSS gebaut. Weitere auf diesen Technologien, die auf diesen grundlegenden Elementen aufbauen, werden in den weiteren Aufgaben präsentiert.</p>
