--- a/tasks/u10/index.html
+++ b/tasks/u10/index.html
@@ -3,57 +3,57 @@
 </p>
 
 <h2>Aufgabe 10.1 - Komponente in Vue.js</h2>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>Eingabe Auswerter</h3>
         <p>
             In dieser Aufgabe sollte eine Webkomponente entwickelt werden, die primär aus einem Textfeld besteht, dessen Inhalt ausgewertet wird. Dabei soll die Anzahl der Buchstaben, die Anzahl der Leerzeichen sowie die Anzahl an Worten gezählt werden. Sie finden in der Vorschau das Element zweimal, wodurch gezeigt werden sollte, dass die Komponenten unabhängig voneinander laufen.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u10/a1/index.html">index.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u10/a1/index.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 10.2 - Menü-Komponente</h2>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>Komponente für Menüs in Vue</h3>
         <p>
             Um die Komponenten Entwicklung weiter zu treiben, wurde in dieser Aufgabe eine Webkomponente entwickelt, die ein Menü repräsentiert. Dem Tag kann das Attribut "orientation" übergeben werden, um zu entscheiden, in welche Richtung das Menü ausgerichtet wird. In der Vorschau sehen Sie beide Varianten.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u10/a2/index.html">index.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u10/a2/index.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 10.3 - Vue.js WWW-Navigator</h2>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>SPA in VUE</h3>
         <p>
             Im letzten Teil dieser Übung wurde eine <dfn>Single Page Applications</dfn> (SPA) programmiert, welche den Web-Navigator aus Übung 8.2 erneut aufgreift. Sollten Sie die SPA genauer betrachten wollen, können Sie diese einfach als ZIP herunterladen.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u10/a3/App.vue">index.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="SPA als Download">
+    <tab-element tab-title="SPA als Download">
     <p>Die SPA aus der Übung können Sie hier als ZIP herunterladen</p> <br>
     <button><a href="tasks/u10/a3/a3.zip">ZIP herunterladen &#8659;</a></button>
 
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
