--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -13,107 +13,107 @@
 
 <h2>Aufgabe 2.1 - Responsiv mit Flexbox Desktop-First</h2>
 
-<example-tabs>    
-    <example-tab title="&#9432;">
+<tab-view>    
+    <tab-element tab-title="&#9432;">
         <h3>Desktop-First und Flexbox</h3>
         <p>In dieser Aufgabe wurde ein responsives Layout erarbeitet. Dafür wurden sogenannte <dfn>Flexboxen</dfn> eingesetzt. Diese erlauben, die Breite und Höhe dynamisch an den Seitenkontext anzupassen und verhindern ein Überlaufen der Komponenten (Komponenten bleiben breiter als der dargestellte Bereich). Das Flex-Layout ist ein eindimensionales Design Element, welches je nach Orientierung <dfn>flex-orientation</dfn> entweder in die Höhe oder in die Breite wachen kann. <br>
         Das Layout sollte dabei nach der <dfn>Desktop-First-Strategie</dfn> entwickelt werden, welche es vorsieht, zuerst die Webseite auf ein Desktop-Gerät angepasst zu gestalten und anschließend mit <dfn>Media-Querys</dfn> entsprechende Breakpoints zu definieren, um die Seite an kleinere Bildschirme anzupassen. Man erkennt die Desktop-First-Startegie im Code meist daran, wenn das <dfn>max-width</dfn> Attribut eingesetzt wird. 
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Mockup">
+    <tab-element tab-title="Mockup">
         <figure>
             <img src="tasks/u2/holy-grail1.png" alt="Holy-Grail">
             <figcaption>Abbildung 2.2: Der Holy-Grail der Web-Entwicklung</figcaption>
         </figure>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u2/a1.html">Index File</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u2/a1.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 <h2>Aufgabe 2.2 - Responsiv mit Grid Mobile-First</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Mobil-First und Grid-Layout</h3>
         <p>
-            Im Gegensatz zu <abbr title="Desktop-First und Flexbox">Aufgabe 1</abbr> sollte bei dieser Aufgabe nach der <dfn>Mobil-First</dfn> Strategie verfahren werden. Dazu wird die Webseite für einen kleinen, meist im Hochformat ausgerichtetes Display, entworfen und später durch Media-Querys an ein großes Display angepasst. Diese Strategie kann im Code an den <dfn>min-width</dfn> Attribut erkannt werden. <br>
+            Im Gegensatz zu <abbr tab-title="Desktop-First und Flexbox">Aufgabe 1</abbr> sollte bei dieser Aufgabe nach der <dfn>Mobil-First</dfn> Strategie verfahren werden. Dazu wird die Webseite für einen kleinen, meist im Hochformat ausgerichtetes Display, entworfen und später durch Media-Querys an ein großes Display angepasst. Diese Strategie kann im Code an den <dfn>min-width</dfn> Attribut erkannt werden. <br>
             Außerdem kam bei dieser Aufgabe das Gridlayout zum Einsatz, welches im Gegensatz zu der Flexbox ein zweidimensionales Layout darstellt. Dies bietet sich also besonders an, wenn man sowohl in die Höhe als auch in die Breite zeitgleich arbeiten möchte.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u2/a2.html">Index File</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u2/a1.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 <h2>Aufgabe 2.3 - Holy Grail</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Der Holy Grail</h3>
         <p>
             Als <dfn>Holy Grail</dfn> versteht man unter Webdesignern bzw. Webdeveloper ein Layout, welches sehr oft auf Webseiten zum Einsatz kommt. Dies sieht im Allgemeinen einen Header, einen Hauptbereich, einen Seitenbereich und einen Footer vor. Dabei sollen Header und Footer am oberen und unteren Ende der Webseite platziert sein und einen Abschluss für diese darstellten. Durch die Integration vom Flexbox- und Grid-Layout wurde die Erstellung eines Holy-Grail deutlich vereinfacht. In dieser Aufgabe kann man beide Varianten betrachten.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Mockup">
+    <tab-element tab-title="Mockup">
         <figure>
             <img src="tasks/u2/holy-grail2.png" alt="Holy-Grail">
             <figcaption>Abbildung 2.3: Holy-Grail der Web-Entwicklung</figcaption>
         </figure>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Flex">
+    <tab-element tab-title="Code - Flex">
         <file-viewer src="tasks/u2/a3_1.html">Index File</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau - Flex">
+    <tab-element tab-title="Vorschau - Flex">
         <embed-browser src="tasks/u2/a3_1.html"></embed-browser>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Grid">
+    <tab-element tab-title="Code - Grid">
         <file-viewer src="tasks/u2/a3_2.html">Index File</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau - Grid">
+    <tab-element tab-title="Vorschau - Grid">
         <embed-browser src="tasks/u2/a3_2.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 <h2>Aufgabe 2.4 - Responsiv mit Grid</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Responiv Design mit Grid-Laout</h3>
-        <p>In dieser Aufgabe wurde das Wireframe aus <abbr title="Wireframe with HTML and CSS (Product Landing Page)">Aufgabe 1.5</abbr> nachgebaut und mit dem Grid-Laout gestaltet. Dadurch passt sich das Wireframe auch responiv an den Bildschirm an. Sie können dieses Verhalten betrachten, indem Sie Ihren Browser langsam kleiner ziehen.</p>
-    </example-tab>
+        <p>In dieser Aufgabe wurde das Wireframe aus <abbr tab-title="Wireframe with HTML and CSS (Product Landing Page)">Aufgabe 1.5</abbr> nachgebaut und mit dem Grid-Laout gestaltet. Dadurch passt sich das Wireframe auch responiv an den Bildschirm an. Sie können dieses Verhalten betrachten, indem Sie Ihren Browser langsam kleiner ziehen.</p>
+    </tab-element>
     
-<example-tab title="Mockup">
+<tab-element tab-title="Mockup">
     <figure>
         <img src="tasks/u1/landing.png" alt="Landing Page">
         <figcaption>Abbildung 2.4: Mock-Up einer Landing-Page</figcaption>
     </figure>
-</example-tab>
+</tab-element>
 
-<example-tab title="Code">
+<tab-element tab-title="Code">
     <file-viewer src="tasks/u2/a4.html">a4.html</file-viewer>
-</example-tab>
+</tab-element>
 
-<example-tab title="Vorschau">
+<tab-element tab-title="Vorschau">
     <embed-browser src="tasks/u2/a4.html"></embed-browser>
-</example-tab>
-</example-tabs>
+</tab-element>
+</tab-view>
 <h2>Aufgabe 2.5 - Integration in die eigene Webseite</h2>
 <p>
     Auf dieser Webseite kommt sowohl das Flexbox- sowie das Grid-Laout zu Einsatz. Die Basis der Webseite ist ein Gridlayout, dass in verschiedenen Breichen wie der Navigationsleiste oder der Tab-Vorschau durch Flexboxen unterstützt wurde.
