--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -3,118 +3,118 @@
 </p>
 
 <h2>Aufgabe 4.1 - Einkaufsliste</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Dom Manipulation</h3>
         <p>
             In dieser Aufgabe sollte eine Einkaufsliste gestaltet werden, die neue Einträge in einer Liste erstellt, die in einer Textbox angegeben wurden. Neben dem reinen Text wurden auch Buttons erzeugt, die es erlauben, die Einträge aus der Liste wieder zu entfernen. 
         </p>
-    </example-tab>
+    </tab-element>
     
-    <example-tab title="Mockup">
+    <tab-element tab-title="Mockup">
         <figure>
             <img src="tasks/u4/Einkaufsliste.png" alt="Einkaufsliste">
             <figcaption>Abbildung 4.1: Vorschau der Einkaufsliste</figcaption>
         </figure>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a1.html">
+    <tab-element tab-title="Code - a1.html">
         <file-viewer src="tasks/u4/a1.html">a1.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a1.js">
+    <tab-element tab-title="Code - a1.js">
         <file-viewer src="tasks/u4/a1.js">a1.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u4/a1.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 
 <h2>Aufgabe 4.2 - Rednerliste mit Zeitmessung</h2>
 
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Erste Schritte mit asynchronen Ereignissen</h3>
         <p>
-            Ähnlich zu <abbr title="Einkaufsliste">Aufgabe 4.1</abbr> sollten hier Einträge in eine Liste dynamisch aufgenommen werden können. In diese Rednerliste wird zusätzlich noch ein Timer hinzugefügt, der die Sprechzeit darstellen soll.
+            Ähnlich zu <abbr tab-title="Einkaufsliste">Aufgabe 4.1</abbr> sollten hier Einträge in eine Liste dynamisch aufgenommen werden können. In diese Rednerliste wird zusätzlich noch ein Timer hinzugefügt, der die Sprechzeit darstellen soll.
         </p>
-    </example-tab>
+    </tab-element>
     
-    <example-tab title="Mockup">
+    <tab-element tab-title="Mockup">
         <figure>
             <img src="tasks/u4/Rednerliste.png" alt="Rednerliste">
             <figcaption>Abbildung 4.2: Vorschau der Rednerliste</figcaption>
         </figure>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a2.html">
+    <tab-element tab-title="Code - a2.html">
         <file-viewer src="tasks/u4/a2.html">a2.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a2.js">
+    <tab-element tab-title="Code - a2.js">
         <file-viewer src="tasks/u4/a2.js">a2.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u4/a2.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 
 <h2>Aufgabe 4.3 - Tabellenkalkulation mit den Bordmitteln des Webs</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Einfacher Excel Klon im Browser</h3>
         <p>
             Hier sollte eine einfache Tabellenkalkulation entwickelt werden, die in der Lage sein sollte, eine einfache Summenformel auszuwerten.
             In dieser Version ist lediglich eine einfache Summenoperation möglich. Sie können dies in der Vorschau testen, indem Sie beliebige Werte in zwei Zellen eintragen und in eine dritte Zelle: "sum=1,1:2,2" eingeben. Passen Sie die Parameter für die Summe, entsprechend der ausgewählten Zellen, an!
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Mockup">
+    <tab-element tab-title="Mockup">
         <figure>
             <img src="tasks/u4/excel_formel.png" alt="Tabellenkalkulation">
             <figcaption>Abbildung 4.3: Vorschau der Tabellenkalkulation</figcaption>
         </figure>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a3.html">
+    <tab-element tab-title="Code - a3.html">
         <file-viewer src="tasks/u4/a3.html">a3.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u4/a3.html"></embed-browser>
-    </example-tab>
+    </tab-element>
 
-  </example-tabs>
+  </tab-view>
 
 
 
 <h2>Aufgabe 4.4 - HTML-Editor</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Weitere DOM-Manipulation</h3>
-        <p>In der letzten Aufgabe sollte ein <abbr title="What you see is what you get">WYSIWYG</abbr>-Editor entworfen werden, mit dem man Text und vor allem das Layout dynamisch bearbeiten kann.</p>
-    </example-tab>
+        <p>In der letzten Aufgabe sollte ein <abbr tab-title="What you see is what you get">WYSIWYG</abbr>-Editor entworfen werden, mit dem man Text und vor allem das Layout dynamisch bearbeiten kann.</p>
+    </tab-element>
 
-    <example-tab title="Code - a4.html">
+    <tab-element tab-title="Code - a4.html">
         <file-viewer src="tasks/u4/a4.html">a4.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a4.js">
+    <tab-element tab-title="Code - a4.js">
         <file-viewer src="tasks/u4/a4.js">a4.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u4/a4.html"></embed-browser>
-    </example-tab>
-  </example-tabs>
+    </tab-element>
+  </tab-view>
 
 <h2>Aufgabe 4.5 - Integration in die eigene Webseite</h2>
 <p>Die DOM-Manipulation ist auf dieser Webseite einen wichtigen Aspekt. Und bildet in zahlreichen Breichen einen wichtigen Grundbaustein für die Funktionalität. So wird beispielsweise das komplette Menü dynamisch via DOM-Manipulation erst während des Aufrufes gebildet.</p>
