--- a/tasks/u7/index.html
+++ b/tasks/u7/index.html
@@ -4,48 +4,48 @@
 
 <h2>Aufgabe 7.1 - File Generatoren</h2>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>Datei-Erzeugung über die Kommandozeile</h3>
         <p>In der ersten Aufgabe sollten zwei Kommandozeilen-Programme mit NodeJS entworfen werden, die es ermöglichen, große Dateien über die Kommandozeile zu erzeugen. Die Datei <em>number_file_gen.js</em> erstellt eine Datei mit x Zeilen und gibt jeweils die Zeilennummer am Anfang aus. Das Programm <em>aplpha_file_gen.js</em> erstellt ebenfalls eine Datei mit x Zeilen. Im Gegensatz zum ersten Programm wird hierbei nicht die Zeilennummer sondern Buchstaben(Bsp.: A,...,Z,AA) ausgegeben.</p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - File Gen">
+    <tab-element tab-title="Code - File Gen">
         <file-viewer src="tasks/u7/a1_a.js">number_file_gen.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Alpha File Gen">
+    <tab-element tab-title="Code - Alpha File Gen">
         <file-viewer src="tasks/u7/a1_b.js">alpha_file_gen.js</file-viewer>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 
 <h2>Aufgabe 7.2 - Performance Merge</h2>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>Dateien zusammenfügen mit Read und Stream</h3>
         <p>
             In dieser Aufgabe sollten zwei Programme entwickelt werden, die zwei Dateien zeilenweise miteinander konkartiniert. Dazu sollte einmal eine Variante mit Streams und einmal ohne entwickelt werden. Einen kleinen Performance Vergleich zwischen den beiden Verfahren finden Sie unter dieser Aufgabe.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Merge">
+    <tab-element tab-title="Code - Merge">
         <file-viewer src="tasks/u7/a2_a.js">merge_files.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Merge Stream">
+    <tab-element tab-title="Code - Merge Stream">
         <file-viewer src="tasks/u7/a2_b.js">merge_streams.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Ergebnisse">
+    <tab-element tab-title="Ergebnisse">
         <p>
             Grundlage waren 5 Messungen: <br>
             Async: 1.329ms<br>
             Stream: 0.971ms
         </p>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 7.3 - Express.js Server</h2>
 <strong>Nachholen</strong>
