--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script type="module" src="assets/js/components/lit/fileView/FileView.mjs" ></script>
     <script type="module" src="assets/js/components/lit/embedBrowser/EmbedBrowser.mjs"></script>
     <script type="module" src="assets/js/components/lit/TabView/TabViewer.mjs"></script>
+    <script type="module" src="assets/js/components/lit/tab-view/tab-element.mjs"></script>
+    <script type="module" src="assets/js/components/lit/tab-view/tab-view.mjs"></script>
     <script type="module" src='assets/js/components/lit/reference/Reference.mjs'></script>
     <script type="module" src="assets/js/components/lit/js-console/JsConsole.mjs"></script>
 
