--- a/tasks/u5/index.html
+++ b/tasks/u5/index.html
@@ -14,110 +14,110 @@
 
 
 <h2>Aufgabe 5.1 - Promises</h2>
-    <example-tabs>
+    <tab-view>
 
-        <example-tab title="&#9432;">
+        <tab-element tab-title="&#9432;">
             <h3>Konkartination von zwei Text Dateien</h3>
             <p>In dieser Aufgabe sollten zwei Textdateien durch die <dfn>fetch-Api</dfn> angefordert werden und die Texte zeilenweise konkartiniert werden. Dabei durfte nicht die neuere <dfn>Async/Await</dfn> Syntax verwendet werden, sondern lediglich die <dfn>.then</dfn> und die <dfn>.chatch</dfn> Methode </p>
-        </example-tab>
+        </tab-element>
         
-        <example-tab title="Code - a1.html">
+        <tab-element tab-title="Code - a1.html">
             <file-viewer src="tasks/u5/a1.html">a1.html</file-viewer>
-        </example-tab>
+        </tab-element>
 
-        <example-tab title="Code - A.txt">
+        <tab-element tab-title="Code - A.txt">
             <file-viewer src="tasks/u5/A.txt">A.txt</file-viewer>
-        </example-tab>
+        </tab-element>
 
-        <example-tab title="Code - B.txt">
+        <tab-element tab-title="Code - B.txt">
             <file-viewer src="tasks/u5/B.txt">A.txt</file-viewer>
-        </example-tab>
+        </tab-element>
 
-        <example-tab title="Vorschau">
+        <tab-element tab-title="Vorschau">
             <embed-browser src="tasks/u5/a1.html"></embed-browser>
-        </example-tab>
-    </example-tabs>
+        </tab-element>
+    </tab-view>
 
 
 <h2>Aufgabe 5.2 - async / await</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Konkartination von zwei Text Dateien</h3>
         <p>In der zweiten Aufgabe sollten wie bereits in der ersten Aufgabe zwei Textdateien verknüpft werden. Dazu sollte in dieser Aufgabe die <dfn>Async/Await</dfn> Syntax verwendet werden.</p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - a2.html">
+    <tab-element tab-title="Code - a2.html">
         <file-viewer src="tasks/u5/a2.html">a1.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - A.txt">
+    <tab-element tab-title="Code - A.txt">
         <file-viewer src="tasks/u5/A.txt">A.txt</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - B.txt">
+    <tab-element tab-title="Code - B.txt">
         <file-viewer src="tasks/u5/B.txt">A.txt</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u5/a2.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 5.3 - Web Worker</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Primzahlberechnung mit und ohne WebWorker</h3>
         <p>Für Berechnungen und Operationen mit JavaScript steht einem prinzipiell ein Thread zur Verfügung. Manchmal möchte man jedoch gewisse Arbeiten auslagern, um einen flüssigeren Aufbau der Webseite zu gewährleisten, damit das DOM anständig gerendert werden kann. In einem solchen Fall kann man auf die bereits in den ersten Aufgaben vorgestellten Promises zurückgreifen oder, falls dies nicht ausreichen sollte, einen zusätzlichen <dfn>WebWorker</dfn> definieren, der die Berechnungen in einem gesonderten Thread durchführt. In Aufgabe 5.3 sollten alle Primzahlen bis zu einer gegebenen oberen Schranke berechnet werden. Einmal mit und einmal ohne WebWorker.</p>
-    </example-tab>
+    </tab-element>
     
-    <example-tab title="Code - Primzahlen ohne WW">
+    <tab-element tab-title="Code - Primzahlen ohne WW">
         <file-viewer src="tasks/u5/a3_1.html">a3_1.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau - ohne WW">
+    <tab-element tab-title="Vorschau - ohne WW">
         <embed-browser src="tasks/u5/a3_1.html"></embed-browser>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - Primzahlen mit WW">
+    <tab-element tab-title="Code - Primzahlen mit WW">
         <file-viewer src="tasks/u5/a3_2.html">a3_2.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - WW">
+    <tab-element tab-title="Code - WW">
         <file-viewer src="tasks/u5/a3.js">a3.js</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau - mit WW">
+    <tab-element tab-title="Vorschau - mit WW">
         <embed-browser src="tasks/u5/a3_2.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 
 
 <h2>Aufgabe 5.4 - WWW-Navigator</h2>
-<example-tabs>
+<tab-view>
 
-    <example-tab title="&#9432;">
+    <tab-element tab-title="&#9432;">
         <h3>Inhalte dynamisch aus einer Quelle laden</h3>
         <p>
-            In dieser Aufgabe sollte eine <abbr title="Single Page Application">SPA</abbr> entwickelt werden, die basierend auf einem <dfn>JSON</dfn> File die Daten und Einträge dynamisch anpassen kann. Dazu wird zu Beginn das JSON File geladen und Schrittweise durch iteriert.
+            In dieser Aufgabe sollte eine <abbr tab-title="Single Page Application">SPA</abbr> entwickelt werden, die basierend auf einem <dfn>JSON</dfn> File die Daten und Einträge dynamisch anpassen kann. Dazu wird zu Beginn das JSON File geladen und Schrittweise durch iteriert.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code - HTML">
+    <tab-element tab-title="Code - HTML">
         <file-viewer src="tasks/u5/a4.html">a4.html</file-viewer>
-    </example-tab>
-    <example-tab title="Code - JSON">
+    </tab-element>
+    <tab-element tab-title="Code - JSON">
         <file-viewer src="tasks/u5/a4.json">a4.json</file-viewer>
-    </example-tab>
-    <example-tab title="Code - JS">
+    </tab-element>
+    <tab-element tab-title="Code - JS">
         <file-viewer src="tasks/u5/a4.js">a4.js</file-viewer>
-    </example-tab>
-    <example-tab title="Vorschau">
+    </tab-element>
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u5/a4.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 
 <h2>Aufgabe 5.5 - Integration in die eigene Webseite</h2>
