--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -6,124 +6,124 @@
 <p>In dieser Aufgabe sollten Lösungen aus älteren Aufgaben in Webkomponenten überführt werden.</p>
 
 <h3>8.1.1 - Einkaufsliste</h3>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>Die Einkaufsliste ermöglicht es, über den "Add item" Button, weitere Elemente in die Liste aufzunehmen.</p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_1.html">a1_1.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_1.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h3>8.1.2 - Rednerliste</h3>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>Mit der Rednerliste können Redner eingetragen werden. Sobald ein neuer Redner angelegt wurde, beginnt ein Timer, der die Redezeit misst. Wird ein weiterer Redner hinzugefügt, stoppt der Timer des ersten Redners und der des zweiten startet. Weiterhin kann der Timer über eine entsprechende Schaltfläche angehalten und fortgesetzt werden.</p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_2.html">a1_2.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_2.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h3>8.1.3 - Tabellenkalkulation</h3>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>
             Eine einfache Tabellenkalkulation, die es ermöglicht, Einträge in eine Tabelle vorzunehmen und mit der Formel: "sum=1,1:1,2" Berechnungen durchzuführen. Achtung! Die zwei Parameter hinter dem Gleichheitszeichen entsprechen den Zellenadressen und müssen ggf. für Ihr Beispiel angepasst werden.  
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_3.html">a1_3.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_3.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h3>8.1.4 - Statistik-Balkendiagramm</h3>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>
             Diese Webkomponente erhält ein JSON File, welches sie anhand fest definierten Key's in einem Balkendiagramm präsentiert.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_4.html">a1_4.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_4.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h3>8.1.5 - Bezier-Animation</h3>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>
             Diese Animation kann auch jetzt einfach als Webkomponente eingebunden werden.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_5.html">a1_5.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_5.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h3>8.1.6 - Kalligraphie-Editor</h3>
 
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <p>
             Mit diesem Editor können Sie mit der Maus einen Pfad zeichnen, der je nachdem wie lange Sie auf einer Stelle verweilen, etwas dicker oder dünner ausfällt. 
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a1_6.html">a1_6.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a1_6.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 8.2 - LitElement Menü-Komponente</h2>
-<example-tabs>
-    <example-tab title="&#9432;">
+<tab-view>
+    <tab-element tab-title="&#9432;">
         <h3>Erste Schritte mit LIT-Element</h3>
         <p>
             In dieser Aufgabe wurde eine Menü-Komponente entwickelt, die ein simples Menüband baut und je nach Parameterwahl horizontal oder vertikal ausrichtet.
         </p>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Code">
+    <tab-element tab-title="Code">
         <file-viewer src="tasks/u8/a2.html">a2.html</file-viewer>
-    </example-tab>
+    </tab-element>
 
-    <example-tab title="Vorschau">
+    <tab-element tab-title="Vorschau">
         <embed-browser src="tasks/u8/a2.html"></embed-browser>
-    </example-tab>
-</example-tabs>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 8.3 - LitElement WWW-Navigator</h2>
 
