Aufgabe 8.3 nachgeholt und eingepflegt

--- a/tasks/u8/index.html
+++ b/tasks/u8/index.html
@@ -127,7 +127,26 @@
 
 <h2>Aufgabe 8.3 - LitElement WWW-Navigator</h2>
 
-<strong>TODO</strong>
+<tab-view>
+    <tab-element tab-title="&#9432;">
+        <h3>Komplexere Aufgabe mit LIT</h3>
+        <p>
+            In der letzten Aufgabe sollte der WWW-Navigator, der bereits in Aufgabe 5 vorgestellt wurde, als Web-Komponente mit lit-Element umgesetzt werden.
+        </p>
+    </tab-element>
+
+    <tab-element tab-title="Code - HTML">
+        <file-viewer src="tasks/u8/a3.html">a2.html</file-viewer>
+    </tab-element>
+
+    <tab-element tab-title="Code - JS">
+        <file-viewer src="tasks/u8/a3.jsm">a2.html</file-viewer>
+    </tab-element>
+
+    <tab-element tab-title="Vorschau">
+        <embed-browser src="tasks/u8/a3.html"></embed-browser>
+    </tab-element>
+</tab-view>
 
 <h2>Aufgabe 8.4 - Integration in die eigene Webseite</h2>
 <p>
